--- a/sections/custom-landing-hero.liquid
+++ b/sections/custom-landing-hero.liquid
@@ -250,7 +250,7 @@
     align-items: center;
     background: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(30px);
-    -webkit-backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(10px);
     padding: 40px 30px;
     border-radius: 20px;
   }
@@ -263,17 +263,17 @@
   }
 
   .landing-hero__heading {
-    font-size: 2.75rem;
-    font-weight: 700;
+    font-size: 2.5rem;
+    font-weight: 600;
     margin: 0;
     text-transform: uppercase;
-    letter-spacing: 0.02em;
-    line-height: 1;
+    letter-spacing: 0;
+    line-height: 1.2;
   }
 
   @media screen and (min-width: 750px) {
     .landing-hero__heading {
-      font-size: 5rem;
+      font-size: 2.5rem;
     }
   }
 
@@ -291,8 +291,8 @@
 
   .landing-hero__discount em,
   .landing-hero__discount i {
-    color: #c9a26a;
-    font-style: normal;
+    color: #B87664;
+    font-style: italic;
     font-weight: 600;
   }
 
