--- a/sections/custom-landing-hero.liquid
+++ b/sections/custom-landing-hero.liquid
@@ -637,6 +637,18 @@
     .landing-hero__features-image-column {
       display: block;
     }
+
+    .landing-hero__image-column,
+    .landing-hero__features-image-column {
+      display: flex;
+      align-items: stretch;
+    }
+
+    .landing-hero__main-image,
+    .landing-hero__features-image {
+      object-fit: cover;
+      height: 100%;
+    }
   }
 
   .landing-hero__features-image,
