--- a/sections/custom-landing-hero.liquid
+++ b/sections/custom-landing-hero.liquid
@@ -636,6 +636,7 @@
     .landing-hero__features-image-column {
       display: flex;
       align-self: stretch;
+      max-height: 600px;
     }
   }
 
@@ -651,8 +652,9 @@
     .landing-hero__features-image {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       max-width: none;
+      max-height: 600px;
     }
   }
 
